<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.ddd.presentation.ui.tutorial.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_sheet">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="28dp"
            android:includeFontPadding="false"
            android:text="@string/login_title"
            android:textColor="@color/sign_up_selected_color"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:lineSpacingExtra="12dp"
            android:text="@string/login_subtitle"
            android:textColor="@color/login_subtitle_color"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:background="@null"
            android:hint="@string/sign_up_hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:onTextChanged="@{(text, start, before, count) -> loginViewModel.emailInputChanged(text)}"
            android:paddingTop="18dp"
            android:paddingBottom="19dp"
            android:textColorHint="@color/login_hint_color"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
            tools:ignore="Autofill,SpUsage" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="82dp"
            android:background="@null"
            android:hint="@string/sign_up_hint_pw"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:onTextChanged="@{(text, start, before, count) -> loginViewModel.passwordInputChanged(text)}"
            android:paddingTop="18dp"
            android:paddingBottom="19dp"
            android:textColorHint="@color/login_hint_color"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"
            app:layout_constraintVertical_bias="0"
            tools:ignore="Autofill,SpUsage" />

        <View
            android:id="@+id/btn_bottom"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#e9e8e9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/img_circle"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/selector_sign_in_circle"
            android:onClick="@{()->loginViewModel.signIn()}"
            app:layout_constraintBottom_toTopOf="@+id/btn_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_bottom"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/img_circle"
            app:layout_constraintEnd_toEndOf="@+id/img_circle"
            app:layout_constraintStart_toStartOf="@+id/img_circle"
            app:layout_constraintTop_toTopOf="@+id/img_circle"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/black"
            android:visibility="@{safeUnbox(loginViewModel.liveProgress) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
