<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="signUpViewModel"
            type="com.ddd.presentation.ui.signup.SignUpViewModel" />

        <variable
            name="StepAuthFragment"
            type="com.ddd.presentation.ui.signup.step.StepAuthFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="What is the Position"
            android:textColor="#151515"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="You always can change"
            android:textColor="#919296"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/edit_sung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:background="@drawable/sign_up_input_background"
            android:hint="@string/sign_up_hint_first_name"
            android:inputType="text"
            android:maxLength="3"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="18dp"
            android:paddingEnd="16dp"
            android:paddingBottom="19dp"
            android:textColor="#c5c5ca"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
            tools:ignore="Autofill,SpUsage" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_up_input_background"
            android:hint="@string/sign_up_hint_last_name"
            android:inputType="text"
            android:maxLength="5"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="18dp"
            android:paddingEnd="16dp"
            android:paddingBottom="19dp"
            android:textColor="#c5c5ca"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_sung"
            tools:ignore="Autofill,SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_sign_up_noti"
            android:drawablePadding="4dp"
            android:text="@string/sign_up_service_overview"
            android:textColor="#666666"
            android:textSize="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="@+id/edit_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_name"
            app:layout_constraintVertical_bias="0"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="#151515"
            android:onClick="@{()->signUpViewModel.replaceFragment(StepAuthFragment)}"
            android:text="다음"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
