<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="signUpViewModel"
            type="com.ddd.presentation.ui.signup.SignUpViewModel" />

        <variable
            name="stepPositionFragment"
            type="com.ddd.presentation.ui.signup.step.StepPositionFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        android:background="@color/main_background_color">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="66dp"
                    android:text="What is the Position"
                    android:textColor="#151515"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="You always can change"
                    android:textColor="#919296"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:ignore="SpUsage" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="49dp"
                    android:background="@drawable/sign_up_input_background"
                    android:hint="@string/sign_up_hint_email"
                    android:maxLength="25"
                    android:onTextChanged="@{(text, start, before, count) -> signUpViewModel.emailInputChanged(text)}"
                    android:textColorHint="#c5c5ca"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="19dp"
                    android:textSize="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
                    tools:ignore="Autofill,SpUsage" />

                <EditText
                    android:id="@+id/edit_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/sign_up_input_background"
                    android:hint="@string/sign_up_hint_pw"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:onTextChanged="@{(text, start, before, count) -> signUpViewModel.pwInputChanged(text)}"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="19dp"
                    android:textSize="15dp"
                    android:textColorHint="#c5c5ca"
                    app:layout_constraintEnd_toEndOf="@+id/edit_email"
                    app:layout_constraintStart_toStartOf="@+id/edit_email"
                    app:layout_constraintTop_toBottomOf="@+id/edit_email"
                    tools:ignore="Autofill,SpUsage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_sign_up_noti"
                    android:drawablePadding="4dp"
                    android:text="@string/sign_up_auth_overview"
                    android:textColor="#666666"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/edit_email"
                    app:layout_constraintTop_toBottomOf="@+id/edit_pw"
                    app:layout_constraintVertical_bias="0"
                    tools:ignore="SpUsage" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{signUpViewModel.liveEnableNextBtn}"
            android:background="@drawable/selector_sign_up_next"
            android:onClick="@{()->signUpViewModel.replaceFragment(stepPositionFragment)}"
            android:paddingTop="24dp"
            app:firstInput="@{signUpViewModel.liveEmail}"
            app:lastInput="@{signUpViewModel.livePW}"
            android:paddingBottom="23dp"
            android:text="@string/sign_up_next"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
